# string_art

./: .gitignore  Cargo.toml  LICENSE  README.md  csv_generation.rb  explore.rb
examples/: elephant.json  fiber-string-color.json  fiber-string-wob.json
scripts/: csv_generation.rb  explore.rb  pretty_instructions.rb
src/: auto_color.rs  cli_app.rs  cli_args.yml  generate_pins.rs  geometry.rs  imagery.rs  inout.rs  main.rs  optimum.rs  pins.rs  string_art.rs  style.rs  util.rs
src/cli_app/: app.rs
src/string_art/: cli_app.rs  geometry.rs  imagery.rs  inout.rs  optimum.rs
src/string_art/style/: white_on_black.rs
src/style/: black_on_white.rs  color.rs  explicit_color.rs  monochrome.rs  white_on_black.rs
