[package]
name = "string_art"
version = "0.1.0"
authors = ["Spencer Christiansen <jc.spencer92@gmail.com>"]
edition = "2021"
description = "Transform an image into string art"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
threadpool = "1.8"
rand = "0.8"
clap = {version = "~2.33.0", features = ["yaml"]}
rayon = "1.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
